k8s/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vorgabenui-rewrite
  namespace: vorgabenui
spec:
  stripPrefix:
    prefixes:
      - "/"
