k8s/ingressdebug.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django
  namespace: vorgabenui
spec:
  ingressClassName: nginx
  rules:
    - host: vorgabenui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 8000
